[gd_scene load_steps=5 format=3 uid="uid://dgvoxwe3b0gxw"]

[ext_resource type="Script" path="res://menufalse.gd" id="1_xsmfs"]
[ext_resource type="Texture2D" uid="uid://miyvwnyev83t" path="res://Assets_aula1/Assets_aula1/botoes/64px/Close_64.png" id="2_oxwi2"]
[ext_resource type="Texture2D" uid="uid://bf2rrgm87lmnr" path="res://Assets_aula1/Assets_aula1/botoes/64px/Back_64.png" id="3_g0iek"]
[ext_resource type="Texture2D" uid="uid://pjv5tas3dsx2" path="res://Assets_aula1/Assets_aula1/botoes/64px/Restart_64.png" id="4_xdnmu"]

[node name="menufalse" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_xsmfs")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(33.5669, 30.8025)
color = Color(0, 0, 0, 0.541176)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -72.0
grow_horizontal = 0
grow_vertical = 2
size_flags_vertical = 4

[node name="sair" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("2_oxwi2")
flat = true

[node name="voltar" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
icon = ExtResource("3_g0iek")
flat = true

[node name="reiniciar" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
icon = ExtResource("4_xdnmu")
flat = true

[connection signal="pressed" from="VBoxContainer/sair" to="." method="_on_sair_pressed"]
[connection signal="pressed" from="VBoxContainer/sair" to="." method="_on_bot√£o_pressed"]
[connection signal="pressed" from="VBoxContainer/voltar" to="." method="_on_voltar_pressed"]
[connection signal="pressed" from="VBoxContainer/reiniciar" to="." method="_on_reiniciar_pressed"]
